# zkUSD

./: .gitignore  Cargo.toml  README.md
docs/: DEVELOPMENT_PLAN.md
guest/: Cargo.toml
guest/src/: common.rs  deposit.rs  liquidation.rs  mint.rs  price_attestation.rs  repay.rs  withdraw.rs
src/: error.rs  lib.rs
src/btc/: mod.rs  scripts.rs  tx_builder.rs  utxo.rs
src/charms/: adapter.rs  executor.rs  metadata.rs  mod.rs  spells.rs  token.rs
src/cli/: commands.rs  config.rs  mod.rs  output.rs
src/core/: cdp.rs  config.rs  fees.rs  mod.rs  token.rs  vault.rs
src/events/: indexer.rs  mod.rs  storage.rs
src/governance/: executor.rs  mod.rs  parameters.rs  proposal.rs  timelock.rs  voting.rs
src/liquidation/: engine.rs  mod.rs  recovery.rs  stability_pool.rs
src/monitoring/: alerts.rs  health.rs  metrics.rs  mod.rs
src/oracle/: aggregator.rs  fetchers.rs  mod.rs  price_feed.rs  service.rs  sources.rs
src/protocol/: events.rs  mod.rs  operations.rs  state_machine.rs
src/rpc/: middleware.rs  mod.rs  rate_limiter.rs
src/spells/: cdp_spells.rs  mod.rs  redemption.rs  types.rs
src/storage/: backend.rs  backup.rs  mod.rs  rocks.rs  state.rs
src/utils/: circuit_breaker.rs  constants.rs  crypto.rs  math.rs  mod.rs  validation.rs
src/zkp/: circuits.rs  inputs.rs  mod.rs  prover.rs  sp1_prover.rs  verifier.rs
tests/: integration_tests.rs
