[package]
name = "zkusd"
version = "0.1.0"
edition = "2021"
authors = ["zkUSD Team"]
description = "A decentralized stablecoin backed by Bitcoin, built on BitcoinOS with zkBTC collateral and Charms token standard"
license = "MIT"
repository = "https://github.com/zkusd/zkusd-protocol"
keywords = ["bitcoin", "stablecoin", "defi", "zkp", "charms"]
categories = ["cryptography", "finance"]

[lib]
name = "zkusd"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
secp256k1 = { version = "0.28", features = ["serde", "rand-std", "hashes"] }
rand = "0.8"
hex = "0.4"

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
miniscript = { version = "12", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# HTTP client (for oracle price fetching)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# RPC Server
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math (fixed-point arithmetic)
rust_decimal = "1.33"
num-traits = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Optional: SP1 zkVM support (host-side SDK for proof generation)
sp1-sdk = { version = "4.0", optional = true }

# Optional: RocksDB for production persistence
rocksdb = { version = "0.22", optional = true }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3.10"

[[bin]]
name = "zkusd"
path = "src/bin/zkusd.rs"

[[bin]]
name = "zkusd-server"
path = "src/bin/server.rs"
required-features = ["rpc-server"]

[features]
default = ["std"]
std = []
async-oracle = ["tokio", "reqwest"]
rpc-server = ["tokio", "axum", "tower", "tower-http"]
sp1-prover = ["sp1-sdk", "tokio"]
rocksdb-storage = ["rocksdb"]
full = ["async-oracle", "rpc-server", "sp1-prover", "rocksdb-storage"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
